Fixing spacing between header and form
And the formatting issues that were affected by the change

--- a/app/assets/stylesheets/local/utilities.scss
+++ b/app/assets/stylesheets/local/utilities.scss
@@ -48,3 +48,15 @@ label.govuk-checkboxes__label.long-label {
   margin-top: -4px;
   padding-top: 0px;
 }
+
+legend.govuk-fieldset__legend {
+  margin-bottom: 0px;
+  h1.govuk-heading-l {
+    margin-bottom: 20px;
+  }
+}
+
+label.govuk-label.govuk-radios__label {
+  text-transform: none !important;
+}
+
